<resources>
    <string name="app_name">Coming Home</string>
    <string name="app_description">Coming Home works with Nest.  After you connect it with Nest and set your Home location, it will automatically set Nest to away or home.
    Coming Home is also aware of other devices connected to the same Nest.  For example, if two people are using Coming Home and one person leaves home, it will not set Nest to away until both people have left.</string>
    <string name="app_credits">Copyright 2015 - Randy McEoin</string>

    <string name="connect_nest">Connect to Nest</string>
    <string name="get_nest">Get Nest Info</string>
    <string name="name">Name</string>
    <string name="away_status">Away Status</string>
    <string name="at_home">At Home</string>
    <string name="away">Away</string>

    <string name="lost_auth">Lost our Nest authorization</string>

    <string name="pincode">Pincode</string>
    <string name="go">Go</string>
    <string name="fillin">Login to the Nest site below and click the accept button.  Then fill in the Pincode here.  You may have to scroll right to see the whole 8 character code.</string>

    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>

    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>

    <string name="oauth_connect_issue">Connect issue</string>
    <string name="oauth_success">Success!</string>
    <string name="oauth_failed">Failed. Examine history for details.</string>
    <string name="oauth_missing_error">Missing error</string>


    <string name="get_others">Get Others</string>
    <string name="fake_left">Fake Left</string>
    <string name="fake_arrived">Fake Arrived</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="forget_nest">Forget Nest</string>
    <string name="forget_nest_confirmation_msg">Are you sure you want to forget access to Nest?</string>
    <string name="forgotten">Forgotten</string>
    <string name="select_structure">Select Structure</string>
    <string name="delay_until_away">Delay until setting away</string>
    <string name="setting_away">Setting away</string>
    <string name="cancel">Cancel</string>
    <string name="away_now">Away now</string>
    <string name="still_on_home_wifi">Still on home WiFi</string>
    <string name="back_on_home_wifi">Back on home WiFi</string>
    <string name="back_at_home_wifi">Back at home WiFi</string>
    <string name="still_at_home_location">Still at home location</string>

    <string name="nest_transition_notification_title">
        Nest set to %1$s
    </string>
    <string name="nest_transition_notification_text">Coming Home Update</string>

    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_delete_history_msg">Are you sure you want to delete all?</string>

    <string name="title_move_at_home">Move At Home</string>
    <string name="msg_move_at_home">Are you sure you want to move your home location?</string>

    <string name="location_permission_missing">Location permission missing</string>

    <!-- Preferences strings -->
    <string name="inline_preferences">Settings</string>

    <string name="key_tell_nest_on_arrival_home">tell_nest_on_arrival_home</string>
    <string name="title_tell_nest_on_arrival_home_preference">Arrival Home</string>
    <string name="summary_tell_nest_on_arrival_home_preference">Upon arrival, set Nest to home</string>

    <string name="key_tell_nest_on_leaving_home">tell_nest_on_leaving_home</string>
    <string name="title_tell_nest_on_leaving_home_preference">Leave Home</string>
    <string name="summary_tell_nest_on_leaving_home_preference">After leaving, set Nest to away</string>

    <string name="key_notifications">notifications</string>
    <string name="title_notifications_preference">Notifications</string>
    <string name="summary_notifications_preference">After updating Nest, show notification</string>

    <string name="title_show_away_delay_notification_preference">Away Delay Notification</string>
    <string name="summary_show_away_delay_notification_preference">Show away delay progress notification</string>

    <string name="title_away_delay_preference">Away delay</string>
    <string name="summary_away_delay_preference">minutes after geofence triggers</string>
    <item name="away_delay_default" type="integer">15</item>
    <item name="away_delay_min_value" type="integer">5</item>
    <item name="away_delay_max_value" type="integer">60</item>

    <string name="title_geofence_radius_preference">Geofence Radius Arriving</string>
    <string name="summary_geofence_radius_preference">meters</string>
    <item name="geofence_radius_default" type="integer">400</item>
    <string name="title_geofence_radius_exit_preference">Geofence Radius Leaving</string>
    <string name="summary_geofence_radius_exit_preference">meters</string>
    <item name="geofence_radius_exit_default" type="integer">400</item>
    <item name="geofence_radius_min_value" type="integer">20</item>
    <item name="geofence_radius_max_value" type="integer">10000</item>
    <string name="increase_radius">Increase radius</string>
    <string name="decrease_radius">Decrease radius</string>

    <string name="title_same_radius_preference">Same Radius</string>
    <string name="summary_same_radius_preference">Use same radius for both arriving and leaving</string>

    <string name="title_home_wifi_preference">Home WiFi</string>
    <string name="summary_home_wifi_preference">Use home WiFi to confirm geofence leaving</string>

    <!-- Initial Wizard -->
    <string name="step1_description">Coming Home works with your Nest Thermostat to automatically set the status to home or away.\n
    \nYour first step will be to use the \'Connect to Nest\' button to grant Coming Home permission to
    check and set status on Nest.</string>
    <string name="step2_description">After you have connected to Nest, use the \'At Home\' button to set the geo location of your home.\n
    \nComing Home will set a geofence that will trigger when you leave or arrive and will automatically
    set the away or home status for Nest.</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>

</resources>
