<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Randy McEoin

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:elevation="5dp"
        android:orientation="horizontal"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonConnectNest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_nest" />

            <TextView
                android:id="@+id/structure_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/away_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/away_status" />

            <TextView
                android:id="@+id/home_wifi_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Home wifi" />

            <Button
                android:id="@+id/buttonSetAtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_home"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <ImageView
            android:id="@+id/location_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/location_permission_missing"
            android:src="@drawable/ic_not_place_black_48dp"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@android:layout/simple_gallery_item" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <ImageButton
                android:id="@+id/btn_increase_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/increase_radius"
                android:padding="10dp"
                android:src="@drawable/ic_control_point_black_36dp" />

            <ImageButton
                android:id="@+id/btn_decrease_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/decrease_radius"
                android:padding="10dp"
                android:src="@drawable/ic_control_point_black_36dp_minus" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>